# decision-trees-ocaml

./: .gitignore  README.md  decision_trees.opam  dune-project  sample.csv
lib/: dataset.ml  dune  heur.ml  parser.ml  query.ml  tree.ml  utils.ml
