(lang dune 3.16)

(name decision_trees)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Rajdeep Sindhu")

; (maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name decision_trees)
 (synopsis "Decision tree learning")
 (description "A basic library for decision tree learning, hopefully from scratch.")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
